# eddi-pad

./: Cargo.toml  Makefile  README.md
src/: lib.rs
src/config/: mod.rs
src/device/: mod.rs
src/protocols/: dmx.rs  mod.rs  osc.rs
src/spatial/: mod.rs
src/ui/: mod.rs
